[package]
name = "project-analysis"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
clap = { version = "3.0", features = ["derive"] }
tabled = "0.7.0"
actix-web = "4"
actix-files = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "1"
indicatif = "0.16.2"
# actix-web-lab = "0.16.3"
